# eventcpp

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  event.h  event.hpp
include/: event.hpp
include/eventcpp/: event.hpp
test/: CMakeLists.txt  benchmark_test.cpp  connection_test.cpp  event_basic.cpp  free_functions_test.cpp  member_functions_test.cpp  multi_subscriber_test.cpp  notify.cpp  notify_multiple.cpp  notify_with_params.cpp  polymorphism_test.cpp  return_types.cpp  sanity_test.cpp  signature_test.cpp
